# UNIUBE-BEC

periodo-4/ARQ. E ORG. DE COMP/: ProcessExplorer.rar
periodo-4/BANCO DE DADOS II/: Caderno.MD
periodo-4/ESTRUTURA DE DADOS I/AulasED1/: CMakeLists.txt
periodo-4/ESTRUTURA DE DADOS I/AulasED1/Momento1/: listaencadeada.c
periodo-4/PROCESSAMENTO DE IMAGENS/: Interpolacaovizinhomaisproximo.doc
periodo-4/TEC. E CIEN. DOS MATERIAIS/: 7-Imperfeições nos sólidos.pptx
periodo-5/AOC/: 1 - BIOS.pptx  1 - CMOS Setup.ppt  1 - Glossário Intel.url
periodo-5/ARQ. E ORG. DE COMP/: 1 - CMOS Setup.ppt  6 - Soma sub-memoria.ppt  Caderno.MD
periodo-5/PROCESSAMENTO DE IMAGENS/: ATIVIDADE 1 - PESQUISA.docx
periodo-5/REDES DE COMPUTADORES/: LinkMaterial.txt
periodo-5/SISTEMAS DE CONTROLE/: Referencias Seminario.txt  SEMINÁRIO AUTOMATIZAÇÃO FRONT-END.docx
periodo-6/LABORATORIO DE PROGRAMACAO COMPETITIVA/: ~$2 - Introducao a Estrutura de Dados Atualizada.pptx
periodo-6/LING. PROG. PARA INTERNET/: 6 - POST Async.docx
periodo-7/ENGENHARIA DE SOFTWARE/: TRABALHO FINAL EDS PDF.docx
periodo-7/LABORATORIO DE PROGRAMACAO COMPETITIVA/: 2 - Introducao a Estrutura de Dados Atualizada.pptx  Lista N1 Resolucao.docx  PROJETO PRATICO N3.docx
periodo-7/SISTEMAS EMBARCADOS E IOT/: Lista de Exercicios 2 Resolucao.docx
periodo-7/TEORIA DA COMPUTAÇÃO/: Exercícios de Aprendizagem.doc  Lista de Exercicios 1.doc  Lista de Exercicios 2 Resolucao.docx  Lista de Exercicios 2.docx  ~$sta de Exercicios 2 Resolucao.docx  ~$sta de Exercicios 2.docx
periodo-8/CIÊNCIA DE DADOS/: AulaSklearn.ipynb  (+2 more)
(+225 files in other folders)
