cmake_minimum_required(VERSION 3.26)
project(AulasED1 C)

set(CMAKE_C_STANDARD 11)
add_executable(listaencadeada Momento1/listaencadeada.c)
add_executable(lista_encadeada_com_cabeca Momento1/lista_encadeada_com_cabeca.c)
add_executable(pilha Momento2/pilhaEx1.c
        Momento2/pilhaEx1.c)
add_executable(pilhaEx2 Momento2/pilhaEx2.c)
